[gd_scene load_steps=2 format=3 uid="uid://d2jaojn22qcmf"]

[ext_resource type="Script" uid="uid://6v4u0veoxgk5" path="res://debug/animation_tester/layers/ui/ui.gd" id="1_j31j6"]

[node name="UI" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("1_j31j6")

[node name="BaseButton" type="Button" parent="."]
unique_name_in_owner = true
layout_mode = 2
offset_right = 145.0
offset_bottom = 37.0
focus_mode = 0

[node name="NameContainer" type="Control" parent="."]
unique_name_in_owner = true
layout_mode = 2
anchors_preset = 0
offset_right = 145.0
offset_bottom = 37.0
mouse_filter = 2

[node name="Texture" type="TextureRect" parent="NameContainer"]
unique_name_in_owner = true
layout_mode = 2
offset_left = 2.0
offset_top = 2.0
offset_right = 33.0
offset_bottom = 34.0
expand_mode = 1
stretch_mode = 4

[node name="Name" type="Label" parent="NameContainer"]
unique_name_in_owner = true
layout_mode = 2
offset_left = 35.0
offset_top = 7.0
offset_right = 143.0
offset_bottom = 30.0
theme_override_font_sizes/font_size = 10
text = "Name"
vertical_alignment = 1
text_overrun_behavior = 3

[node name="ButtonContainer" type="Control" parent="."]
unique_name_in_owner = true
layout_mode = 2
anchors_preset = 0
offset_right = 145.0
offset_bottom = 37.0
mouse_filter = 2

[node name="up" type="Button" parent="ButtonContainer"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = 1.0
offset_top = -18.5
offset_right = 40.0
offset_bottom = 18.5
grow_horizontal = 0
grow_vertical = 2
focus_mode = 0
text = "^"

[node name="down" type="Button" parent="ButtonContainer"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = 41.0
offset_top = -18.5
offset_right = 80.0
offset_bottom = 18.5
grow_horizontal = 0
grow_vertical = 2
focus_mode = 0
text = "v"

[node name="trash" type="Button" parent="ButtonContainer"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = -1
anchor_left = 1.018
anchor_top = 0.5
anchor_right = 1.018
anchor_bottom = 0.5
offset_left = 78.39
offset_top = -18.5
offset_right = 117.39
offset_bottom = 18.5
focus_mode = 0
text = "X"
